<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_speaker_notes_white_24dp"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_account_circle_white_24dp"
            android:title="@string/menu_user_profile" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_notifications_white_24dp"
            android:title="@string/reminders" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_folder_white_24dp"
            android:title="@string/archive" />
    </group>


    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings_label" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="@string/logout_label" />

</menu>
