<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tn_bg2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginStart="@dimen/twentysixdp"
            android:layout_marginEnd="@dimen/twentysixdp"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:layout_width="@dimen/hundredseventysevendp"
                android:layout_height="@dimen/eightyfourdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/fortydp"
                android:layout_marginBottom="@dimen/twentysixdp"
                android:background="@drawable/help_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tendp"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/adding_notes"
                android:textSize="@dimen/twentysp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/an_1"
                android:textSize="@dimen/help_paragraph_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/an_2"
                android:textSize="@dimen/help_paragraph_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/an_3"
                android:textSize="@dimen/help_paragraph_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tendp"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/editing_and_deleting_notes"
                android:textSize="@dimen/twentysp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/edn_1"
                android:textSize="@dimen/help_paragraph_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/edn_2"
                android:textSize="@dimen/help_paragraph_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/edn_3"
                android:textSize="@dimen/help_paragraph_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tendp"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/settings_label"
                android:textSize="@dimen/twentysp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/s_1"
                android:textSize="@dimen/help_paragraph_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/s_2"
                android:textSize="@dimen/help_paragraph_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/s_3"
                android:textSize="@dimen/help_paragraph_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/s_4"
                android:textSize="@dimen/help_paragraph_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="@dimen/tendp"
                android:text="@string/s_5"
                android:textSize="@dimen/help_paragraph_size" />

            <Button
                android:id="@+id/help_returnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Return"
                android:background="@drawable/inner_button_design"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/fortydp"
                android:layout_marginBottom="@dimen/fortydp"/>

        </LinearLayout>

</ScrollView>