<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tn_bg2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/seventysevendp">

        <EditText
            android:id="@+id/unEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/un_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unTextView" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fortydp"
            android:layout_marginTop="@dimen/tendp"
            android:background="@drawable/button_selector"
            android:text="@string/login_label"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="0.735"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwEditText" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fortydp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector"
            android:text="@string/cancel_button_label"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.693"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwEditText" />

        <TextView
            android:id="@+id/unTextView"
            android:layout_width="@dimen/signup_login_label_width"
            android:layout_height="@dimen/thirtyfivedp"
            android:layout_marginTop="@dimen/thirtyfivedp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/un_label"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/twentysp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.337"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/pwTextView"
            android:layout_width="@dimen/signup_login_label_width"
            android:layout_height="@dimen/fortydp"
            android:layout_marginTop="@dimen/twentydp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/pw_label"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/twentysp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unEditText" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="177dp"
            android:layout_height="84dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/login_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_text" />

        <EditText
            android:id="@+id/pwEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pw_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwTextView" />

        <TextView
            android:id="@+id/signUpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hundreddp"
            android:text="@string/click_here_to_sign_up"
            android:textColor="@color/default_whitish_color"
            android:textSize="@dimen/twentysp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancelButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>