<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Switch
        android:id="@+id/darkModeToggle"
        android:layout_width="@dimen/twohundredsixtydp"
        android:layout_height="@dimen/twentysixdp"
        android:layout_marginStart="@dimen/fiftydp"
        android:layout_marginTop="@dimen/hundreddp"
        android:layout_marginEnd="@dimen/fiftydp"
        android:text="@string/dark_mode"
        android:textSize="@dimen/eighteensp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/notificationsToggle"
        android:layout_width="@dimen/twohundredsixtydp"
        android:layout_height="@dimen/twentysixdp"
        android:layout_marginStart="@dimen/fiftydp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/fiftydp"
        android:text="@string/notifications"
        android:textSize="@dimen/eighteensp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/darkModeToggle" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fortydp"
        android:layout_marginBottom="@dimen/fortydp"
        android:background="@drawable/inner_button_design"
        android:text="@string/save"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>